# OpenSeq2Seq

./: .gitignore  .pylintrc  .style.yapf  AUTHORS  CONTRIBUTING.md  Dockerfile  Dockerfile_public  Interactive_Infer.ipynb  Interactive_Infer_example.ipynb  README.md  Streaming ASR.ipynb  Streaming-ASR.ipynb  bench.py  bpe.32000  build_lm.py  calibrate_model.py  config_2018-08-03_17-25-03.py  create_toy_data.sh  demo_streaming_asr.py  docs.ipynb  download_lm.sh  frame_asr.py  get_best_accuracy.py  get_multidata_en_de.sh  get_wmt16_en_de.sh  get_wmt16_en_dt.sh  imdb_data.py  import_librivox.py  install.txt  requirements.txt  run.py  run_dist.py  run_lm.sh  setup.py  start_experiment.sh  start_graphics.sh  stop_graphics.sh  test.py  test_error.py  test_load.py  (+2 more)
QA/: README.md  generate_candidates.py  run.py  setup.sh
QuestionAnswering/: README.md  TrainGloVe.sh  data_preprocessing.py
calibration/: sample.csv  target.json
configs/: larc_047.py  larc_048.py  larc_049.py  larc_050.py  larc_051.py  larc_052.py  larc_053.py  larc_054.py  larc_055.py  larc_056.py  larc_057.py  larc_058.py
ctc_decoder_with_lm/: BUILD  BUILD.with-nm-lm  README.md  alphabet.h  beam_search.cc  beam_search.h  ctc-test-lm.trie  ctc-test.py  definitions.mk  external_lm.cpp  external_lm.h  generate_trie.cpp  trie_node.h
decoders/: README.md  ctc_beam_search_decoder.cpp  ctc_beam_search_decoder.h  ctc_decoders.py  decoder_utils.cpp  path_trie.cpp  setup.py  setup.sh
docker/: .bazelrc  .tf_configure.bazelrc  (+1 more)
external_lm/: CMakeLists.txt  README.md  external_lm.cpp  external_lm.h  extlm.cpp
(+1289 files in other folders)
